--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.17.2",
     "express": "^4.15.0",
-    "jquery": "^3.1.1",
+    "moment": "^2.24.0",
+    "mongo": "^0.1.0",
     "mongoose": "^4.8.6",
     "prop-types": "^15.7.2",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
