--- a/package.json
+++ b/package.json
@@ -7,19 +7,28 @@
     "build": "webpack -d --watch",
     "start": "nodemon server/index.js"
   },
-  "author": "Ya Boy",
+  "author": "Bradley Francis",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "body-parser": "^1.17.2",
     "express": "^4.15.0",
+    "google-map-react": "^1.1.4",
     "moment": "^2.24.0",
     "mongo": "^0.1.0",
     "mongoose": "^4.8.6",
