--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "aws-sdk": "^2.496.0",
     "axios": "^0.19.0",
+    "bluebird": "^3.5.5",
     "body-parser": "^1.17.2",
     "express": "^4.15.0",
+    "file-type": "^12.0.1",
     "google-map-react": "^1.1.4",
-    "moment": "^2.24.0",
     "mongo": "^0.1.0",
     "mongoose": "^4.8.6",
+    "multiparty": "^4.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
