--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack -d --watch",
-    "start": "nodemon server/index.js"
+    "start": "node server/index.js"
   },
   "author": "Bradley Francis",
   "license": "ISC",
@@ -29,7 +29,7 @@
     "file-type": "^12.0.1",
     "google-map-react": "^1.1.4",
     "mongo": "^0.1.0",
-    "mongoose": "^4.8.6",
+    "mongoose": "^5.7.1",
     "multiparty": "^4.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
