--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack -d --watch",
+    "build": "webpack",
     "start": "node server/index.js"
   },
   "author": "Bradley Francis",
