--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "node server/index.js"
+    "start": "node server/index.js",
+    "heroku-postbuild": "npm install && npm run build"
   },
   "author": "Bradley Francis",
   "license": "ISC",
