--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
-    "heroku-postbuild": "npm install && npm run build && --env."
+    "heroku-postbuild": "npm install && npm run build"
   },
   "author": "Bradley Francis",
   "license": "ISC",
