--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "jest --no-watchman",
     "build": "webpack",
     "start": "node server/index.js",
     "heroku-postbuild": "npm install && npm run build",
@@ -18,6 +19,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
+    "jest": "^24.9.0",
     "webpack": "^2.2.1"
   },
   "dependencies": {
