--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "multiparty": "^4.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "sharp": "^0.24.0"
   }
 }
